Usando Template Forms na Compra

--- a/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
@@ -19,7 +19,7 @@
             <th> ({{item.quantity}} x) {{ item.menuItem.name }}</th>
 
             <td class="text-right">{{ item.value()| currency: 'BRL': true }} </td>
-            <a (click)="removeItem(item)" class="btn btn-sm danger">Remover</a>
+            <a (click)="removeItem(item)" class="btn btn-sm danger"><i class="fa fa-remove danger"></i></a>
           </tr>
           <tr>
             <th>Total:</th>
@@ -32,7 +32,7 @@
   <div class="box-footer" *ngIf="items().length">
     <div class="pull-right">
       <button (click)="clear()"  type="button" class="btn btn-danger"><i class="fa fa-trash"></i> Limpar</button>
-      <a href="order.html" class="btn btn-success"><i class="fa fa-credit-card"></i> Fechar Pedido</a>
+      <a  [routerLink]="['/order']" class="btn btn-success"><i class="fa fa-credit-card"></i> Fechar Pedido</a>
     </div>
   </div>
 </div>
