--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -45,9 +45,14 @@
         <div class="col-xs-12">
           <p class="lead">Itens do Pedido:</p>
         </div>
-        
-        <mt-order-item></mt-order-item>
-        
+
+        <mt-order-item
+                  [items]="cartItems()"
+                  (increaseQty)="increaseQty($event)"
+                  (decreaseQty)="decreaseQty($event)"
+                  (remove)="remove($event)">
+        </mt-order-item>
+
       </div>
       <!-- /.row -->
 
@@ -57,7 +62,7 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-             <mt-radio [options]="paymentOptions" name="paymentOption" ngModel></mt-radio>
+             <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
           </div>
 
         </div>
@@ -65,24 +70,9 @@
         <div class="col-sm-6 col-xs-12">
           <p class="lead">Frete e Total:</p>
 
-          <div class="table-responsive">
-            <table class="table">
-              <tbody>
-                <tr>
-                  <th style="width:50%">Itens:</th>
-                  <td class="text-right">R$ 20,00</td>
-                </tr>
-                <tr>
-                  <th>Frete:</th>
-                  <td class="text-right">R$ 8,00</td>
-                </tr>
-                <tr>
-                  <th>Total:</th>
-                  <td class="text-right">R$ 28,00</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+            <mt-delivery-costs [delivery]="delivery"
+                                [itemsValue]="itemsValue()">
+            </mt-delivery-costs>
         </div>
         <!-- /.col -->
       </div>
@@ -91,7 +81,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button [disabled]="!form.valid" class="btn btn-success pull-right">
+        <button [disabled]="!form.valid || cartItems().length === 0" class="btn btn-success pull-right">
                 <i class="fa fa-credit-card"></i> Concluir Pedido
               </button>
       </div>
