--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col-sm-4 col-xs-6">
           <mt-input-container label="Complemento">
-            <input class="form-control" name="optional" ngModel placeholder="Complemento" autocomplete="off" />
+            <input class="form-control" name="optionalAddress" ngModel placeholder="Complemento" autocomplete="off" />
           </mt-input-container>
 
         </div>
@@ -81,7 +81,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button [disabled]="!form.valid || cartItems().length === 0" class="btn btn-success pull-right">
+        <button  (click)="checkOrder(form.value)" [disabled]="!form.valid || cartItems().length === 0" class="btn btn-success pull-right">
                 <i class="fa fa-credit-card"></i> Concluir Pedido
               </button>
       </div>
