Criando shared módulo

--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -5,9 +5,9 @@
 <section class="content">
   <section class="invoice">
 
-    {{ form.valid }} {{ form.value | json }}
+    {{ orderForm.valid }} {{ orderForm.value | json }}
 
-    <form #form="ngForm" novalidate>
+    <form [formGroup]="orderForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -16,23 +16,50 @@
         </div>
       </div>
 
-      <div class="row invoice-info">
+      <div class="row">
+        <div class="col-xs-12 col-sm-9">
+          <p class="lead">Seus dados:</p>
+        </div>
+
+        <div class="col-xs-12 col-sm-3">
+            <span class="help-block pull-right has-error-bloc" *ngIf="orderForm.hasError('emailsNotMatch')"  ><i class="fa fa-remove"></i> Emails não conferem</span>
+        </div>
+
+        <div class="col-sm-5 col-xs-12">
+          <mt-input-container errorMessage="Endereço obrigatório e com 5 caracteres" label="Endereço">
+            <input class="form-control" formControlName="name" placeholder="Endereço" autocomplete="off" />
+          </mt-input-container>
+        </div>
+
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="Email inválido" label="Email">
+            <input class="form-control" formControlName="email" placeholder="Email" autocomplete="off" />
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="Confirmação Email inválido" label="Email">
+            <input class="form-control" formControlName="emailConfirmation" placeholder="Confirmação Email" autocomplete="off" />
+          </mt-input-container>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-xs-12">
           <p class="lead">Endereço de Entrega:</p>
         </div>
         <div class="col-sm-5 col-xs-12">
           <mt-input-container errorMessage="Endereço obrigatório e com 5 caracteres" label="Endereço">
-            <input class="form-control" name="address" ngModel required minlength="5" placeholder="Endereço" autocomplete="off" />
+            <input class="form-control" formControlName="address" placeholder="Endereço" autocomplete="off" />
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container errorMessage="Número obrigatório e somente números" label="Número">
-            <input class="form-control" pattern="^[0-9]*$" name="number" ngModel required placeholder="Número" autocomplete="off" />
+            <input class="form-control" formControlName="number" placeholder="Número" autocomplete="off" />
           </mt-input-container>
         </div>
         <div class="col-sm-4 col-xs-6">
           <mt-input-container label="Complemento">
-            <input class="form-control" name="optionalAddress" ngModel placeholder="Complemento" autocomplete="off" />
+            <input class="form-control" formControlName="optionalAddress" placeholder="Complemento" autocomplete="off" />
           </mt-input-container>
 
         </div>
@@ -46,11 +73,7 @@
           <p class="lead">Itens do Pedido:</p>
         </div>
 
-        <mt-order-item
-                  [items]="cartItems()"
-                  (increaseQty)="increaseQty($event)"
-                  (decreaseQty)="decreaseQty($event)"
-                  (remove)="remove($event)">
+        <mt-order-item [items]="cartItems()" (increaseQty)="increaseQty($event)" (decreaseQty)="decreaseQty($event)" (remove)="remove($event)">
         </mt-order-item>
 
       </div>
@@ -62,7 +85,7 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-             <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
+            <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
           </div>
 
         </div>
@@ -70,9 +93,8 @@
         <div class="col-sm-6 col-xs-12">
           <p class="lead">Frete e Total:</p>
 
-            <mt-delivery-costs [delivery]="delivery"
-                                [itemsValue]="itemsValue()">
-            </mt-delivery-costs>
+          <mt-delivery-costs [delivery]="delivery" [itemsValue]="itemsValue()">
+          </mt-delivery-costs>
         </div>
         <!-- /.col -->
       </div>
@@ -81,7 +103,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button  (click)="checkOrder(form.value)" [disabled]="!form.valid || cartItems().length === 0" class="btn btn-success pull-right">
+        <button (click)="checkOrder(orderForm.value)" [disabled]="!orderForm.valid || cartItems().length === 0" class="btn btn-success pull-right">
                 <i class="fa fa-credit-card"></i> Concluir Pedido
               </button>
       </div>
