Mudanças nas cores do layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
   <footer class="main-footer">
     <div class="container">
       <div class="pull-right hidden-xs">
-        <b>Version</b> 1.0.0
+        <b>Version</b> 1.1.0
       </div>
-      <strong>Meat</strong> Angular Application
+      <strong>I'm hungry</strong> Angular Application
     </div>
   </footer>
 </div>
