--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,11 +5,11 @@
 <section class="content">
 
   <div class="jumbotron welcome-jumbotron">
-     <h1>Bem vindo ao Meat!</h1>
+     <h1>Bem vindo ao I'm hungry!</h1>
      <p>
-       Está com fome? Peça e receba em casa.
+       Está com fome? Se aproxegue rapaz!
      </p>
-     <a class="btn btn-primary btn-lg" [routerLink]="['/restaurants']">Ver Restaurantes</a>
+     <a class="btn btn-success btn-lg" [routerLink]="['/restaurants']">Ver Restaurantes</a>
   </div>
 
 </section>
