--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <!-- Início do header -->
 <header class="main-header">
-  <nav class="navbar navbar-static-top">
+  <nav style="background: green;" class="navbar navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-        <a [routerLink]="['/']" class="navbar-brand"><b>Meat</b></a>
+        <a [routerLink]="['/']" class="navbar-brand"><b>I'm hungry</b></a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
           <i class="fa fa-bars"></i>
         </button>
