--- a/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,7 @@
 <!--INICIO DO CARRINHO-->
 <div class="box box-solid">
   <div class="box-header">
-    <i class="fa fa-shopping-cart"></i>
+    <i class="fa fa-shopping-cart" style="color:green;"></i>
 
     <h3 class="box-title">Carrinho</h3>
   </div>
