--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+
+
 body {
   color: #555;
 }
@@ -198,7 +200,7 @@ body {
 */
 
 .danger {
-  color: #dd4b39;
+  color: red;
   display: inline;
 }
 
@@ -255,7 +257,7 @@ body {
 }
 
 .detail-active {
-  border-bottom: 2px solid #dd4b39;
+  border-bottom: 2px solid green;
 }
 
 .has-error-block {
