--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -2,7 +2,27 @@
 <section class="content-header">
   <h1>
     Todos os Restaurantes
+    <a (click)="toggleSearch()" class="search-link pull-right">
+        <span *ngIf="iptSearch.value"><small>"{{ iptSearch.value }}"</small></span>
+      <i class="fa fa-search" ></i>
+    </a>
   </h1>
+
+  <div class="row">
+    <div class="col-xs-12 search-bar" [@toggleSearch]="searchBarState">
+      <form [formGroup]="searchForm">
+        <div class="form-group">
+          <input type="text" #iptSearch class="form-control" formControlName="searchControl"
+                 placeholder="O que você está procurando?">
+        </div>
+        <div class="col-xs-12" *ngIf="restaurants?.length == 0">
+            <p class="lead text-center">
+              Não foram encontrados itens para a sua busca.
+            </p>
+        </div>
+      </form>
+    </div>
+  </div>
 </section>
 
 
