--- a/src/styles.css
+++ b/src/styles.css
@@ -263,3 +263,19 @@ body {
 .has-error-block {
   color: #dd4b39;
 }
+
+
+/* Barra de busca de restaurantes */
+.search-link{
+  cursor: pointer;
+  color: #555;
+}
+
+.search-link:hover{
+  color: green;
+}
+
+.search-bar{
+  opacity: 0;
+  max-height: 0px;
+}
