Protegendo o Módulo de Compra com CanLoad

--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -26,8 +26,8 @@
         </div>
 
         <div class="col-sm-5 col-xs-12">
-          <mt-input-container errorMessage="Endereço obrigatório e com 5 caracteres" label="Endereço">
-            <input class="form-control" formControlName="name" placeholder="Endereço" autocomplete="off" />
+          <mt-input-container errorMessage="Nome obrigatório e com 5 caracteres" label="Endereço">
+            <input class="form-control" formControlName="name" placeholder="Nome" autocomplete="off" />
           </mt-input-container>
         </div>
 
